<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CardsCreateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cardsCreateEdtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                android:layout_marginTop="@dimen/marginTopDefaultValue"
                android:layout_marginRight="@dimen/marginRightDefaultValue"
                android:ems="10"
                android:hint="@string/inputHintNameCard"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/cardsCreateEdtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                android:layout_marginTop="@dimen/marginTopDefaultValue"
                android:layout_marginRight="@dimen/marginRightDefaultValue"
                android:ems="10"
                android:hint="@string/inputHintDescriptionCard"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                android:layout_marginTop="@dimen/marginTopDefaultValue"
                android:layout_marginRight="@dimen/marginRightDefaultValue"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/profile_default_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/cardsCreateEdtValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <EditText
                        android:id="@+id/cardsCreateEdtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/marginTopDefaultValue"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="date" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/cardsCreateTextChoosePlaceMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                android:layout_marginTop="@dimen/marginTopDefaultValue"
                android:layout_marginRight="@dimen/marginRightDefaultValue"
                android:text="@string/textChoosePlaceMap" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/cardsCreateMapChosePaymentPlace"
                android:layout_width="match_parent"
                android:layout_height="171dp"
                android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                android:layout_marginRight="@dimen/marginRightDefaultValue" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeftDefaultValue"
                android:layout_marginTop="@dimen/marginTopDefaultValue"
                android:layout_marginRight="@dimen/marginRightDefaultValue"
                android:layout_marginBottom="@dimen/marginBottomDefaultValue"
                android:background="@color/colorGreenOk"
                android:text="@string/btnTextSave" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>